fix nav bar's container to container-fluid to remove stretching

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -17,6 +17,7 @@ body {
 .nav {
   list-style-type: none;
   padding: 0;
+  border-bottom: 1px solid #00aced;
 }
 
 .nav li {
@@ -44,10 +45,10 @@ body {
 }
 
 .tweet-box {
-  background-color: #c0deed;
+  background-color: #eeeeee;
   padding: 15px;
   border-radius: 3px;
-  border: 1px solid #e2fffe;
+  border: 1px solid #00aced;
 }
 
 .panel {
@@ -64,7 +65,7 @@ textarea {
   resize: none;
   border: none;
   border-radius; 2px;
-  border: 1px solid #00aced;
+  border: 1px solid #e2fffe;
 }
 
 .tweet-button {
